Настроена макет-страница

--- a/Views/_ViewImport.cshtml
+++ b/Views/_ViewImport.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿@using WebGB
+@using WebGb.Models
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WebStore
+
 @{
     ViewData["Title"] = "_ViewImport";
 }
