--- a/Views/Default/Default.cshtml
+++ b/Views/Default/Default.cshtml
@@ -2,10 +2,7 @@
 @{
 
     ViewData["Title"] = "Default";
-}
-
-@{
-    Layout = "_Layout";
+       Layout = "_Layout";
 }
 
 
@@ -780,3 +777,8 @@
         </div>
     </div>
 </section>
+
+@section Scripts{
+}
+
+
