Основные частичные представления

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <partial name="Partial/_Styles"></partial>
 
     <link rel="shortcut icon" href="images/ico/favicon.ico">
-    @RenderSectionAsync("Styles",false)
+    @await RenderSectionAsync("Styles",false)
 </head>
 <body>
    
