--- a/Views/Shared/Partial/_MainMenu.cshtml
+++ b/Views/Shared/Partial/_MainMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿<ul class="nav navbar-nav collapse navbar-collapse">
-    <li><a href="index.html" class="active">Home</a></li>
+    <li><a asp-controller="Default" action="Index" class="active">Home</a></li>
     <li class="dropdown">
         <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
