--- a/Views/Shared/Partial/_MainMenu.cshtml
+++ b/Views/Shared/Partial/_MainMenu.cshtml
@@ -3,20 +3,20 @@
     <li class="dropdown">
         <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
-            <li><a href="shop.html">Каталог</a></li>
-            <li><a href="product-details.html">О товаре</a></li>
-            <li><a href="checkout.html">Оформить заказ</a></li>
-            <li><a href="cart.html">Корзина</a></li>
-            <li><a href="login.html">Вход</a></li>
+            <li><a asp-controller="Default" asp-action="Shop" >Каталог</a></li>
+            <li><a asp-controller="Default" asp-action="Product_Details"  >О товаре</a></li>
+            <li><a asp-controller="Default" asp-action="CheckOut" >Оформить заказ</a></li>
+            <li><a asp-controller="Default" asp-action="Cart" >Корзина</a></li>
+            <li><a asp-controller="Default" asp-action="Login" >Вход</a></li>
         </ul>
     </li>
     <li class="dropdown">
         <a href="#">Блог<i class="fa fa-angle-down"></i></a>
         <ul role="menu" class="sub-menu">
-            <li><a href="blog.html">Список блогов</a></li>
-            <li><a href="blog-single.html">Блог магазина</a></li>
+            <li><a asp-controller="Default" asp-action="Blog" >Список блогов</a></li>
+            <li><a asp-controller="Default" asp-action="Blog_Single"  >Блог магазина</a></li>
         </ul>
     </li>
-    <li><a href="404.html">404</a></li>
-    <li><a href="contact-us.html">Контакты</a></li>
+    <li><a asp-controller="Default" asp-action="Error"  >404</a></li>
+    <li><a  asp-controller="Default" asp-action="Contact_Us"  >Контакты</a></li>
 </ul>
