--- a/Views/Employees/Details.cshtml
+++ b/Views/Employees/Details.cshtml
@@ -45,7 +45,7 @@
                 </dl>
             </div>
             <div>
-              
+                <a asp-action="Edit" asp-route-id="@Model.ID">Редактировать </a>
                 <a asp-action="Index">Вернуться к списку </a>
             </div>
 
