--- a/Views/Employees/Index.cshtml
+++ b/Views/Employees/Index.cshtml
@@ -11,13 +11,16 @@
             <table>
                 @foreach (var employer in Model)
                 {
-                    <tr>
-                        <td> <a asp-action="Details" asp-route-id="@employer.ID"> @employer.ID </a> </td>
-                        <td>@employer.Name </td>
-                        <td>@employer.Surname </td>
-                    </tr>
+                <tr>
+                    <td>@employer.Name </td>
+                    <td>@employer.Surname </td>
+                    <td> <a asp-action="Details" asp-route-id="@employer.ID">Карточка</a> </td>
+                </tr>
                 }
             </table>
+            <div>
+                <a asp-action="Edit" > Добавить сотрудника </a>
+            </div>
         </div>
 
 
